deploy/k8s/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden-mysql
  namespace: home-automation
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: vaultwarden-mysql
  template:
    metadata:
      labels:
        app: vaultwarden-mysql
    spec:
      containers:
        - name: vaultwarden-mysql
          image: mysql:5.7
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: vaultwarden-db
              mountPath: /var/lib/mysql
      volumes:
        - name: vaultwarden-db
          persistentVolumeClaim:
            claimName: pvc-iscsi-vaultwarden-db

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden
  namespace: tools
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 65534
      containers:
        - name: vaultwarden
          image: "vaultwarden/server:1.25.0"
          imagePullPolicy: IfNotPresent
          resources: {}
          securityContext:
            runAsGroup: 65534
            runAsUser: 65534
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 3012
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: vaultwarden
              mountPath: /data
      volumes:
        - name: vaultwarden
          persistentVolumeClaim:
            claimName: vaultwarden

---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden
  namespace: tools
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: websocket
      protocol: TCP
      port: 3012
      targetPort: 3012

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden
  namespace: tools
  labels:
    app: vaultwarden
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  rules:
    - host: "bitwarden.theautomation.nl"
      http:
        paths:
          - path: "/notifications/hub"
            backend:
              service:
                name: vaultwarden
                port:
                  number: 3012
          - path: "/"
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
  tls:
    - hosts:
        - bitwarden.theautomation.nl
      secretName: cloudflare-tls
